[package]
name = "rulp"
version = "0.1.1"
authors = ["drbh <david.richard.holtz@gmail.com>", "feelmyears <philipmeyers2017@u.northwestern.edu>", "ajm012 <andrewmcconnell2016@u.northwestern.edu>"]
description = "A library providing functionality to parse, create and solve linear programming problems."
repository = "https://github.com/drbh/rulp"
license = "MIT"
keywords = ["linear-program","linear-programming","tableau","simplex"]
readme = "README.md"

[dependencies]
rulinalg="0.4.2"
regex = "0.2"
assert_approx_eq = "0.2.2"
approx = "0.1.1"
